add missing import to config.urls

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 DB_USER=
 DB_PW=
 HOME_URL=http://127.0.0.1:8000/
-SECRET_KEY=
+SECRET_KEY='a03t7(gzxmx-$=vblmufw$b@)3fsw@)pvsrzq9rth$^_42+o@h'
 DEBUG=True
 
 # json
